# cmaes

./: .gitignore  LICENSE  README.md  fuzzing.py  pyproject.toml  requirements-bench.txt  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: benchmarks.yml  examples.yml  lint.yml  pypi-publish.yml  tests.yml
benchmark/: Dockerfile  README.md  bench_hybrid.py  benchmarking_dashboard.ipynb  functions.py  optuna_solver.py  problem_himmelblau.py  problem_rastrigin.py  problem_rosenbrock.py  problem_six_hemp_camel.py  problem_six_hump_camel.py  problem_sphere.py  profile.py  readme-benchmark.md  runner.sh  sensitivity.py  solver_cmaes.py  solver_pycma.py  speed_problem.py  speed_test.py
benchmark/action/: action.yml
cmaes/: __init__.py  _catcma.py  _catcmawm.py  _cma.py  _cmawm.py  _comocatcmawm.py  _dxnesic.py  _ipop.py  _mapcma.py  _safe_cma.py  _sepcma.py  _stats.py  _uhvi_archiving.py  _warm_start.py  _xnes.py  bipop_full_cma.py  bipop_sep_cma.py  cma.py  cmasop.py  ipop_full_cma.py  ipop_sep_cma.py  monkeypatch.py  safe_cma.py  sampler.py  sepcma.py
examples/: bipop_cma.py  bipop_cmaes.py  bipop_sep_cma.py  catcma.py  catcma_with_margin.py  cma_sop.py  cmaes_with_margin.py  cmaes_with_margin_integer.py  como_catcma_with_margin.py  dynamic_search_space.py  ellipsoid_function.py  ipop_cma.py  ipop_cmaes.py  ipop_sep_cma.py  lra_cma.py  mapcma.py  monkeypatch.py  optuna_sampler.py  quadratic_2d_function.py  quadratic_function.py  safecma.py  sepcma_ellipsoid_function.py  single_dimension.py  sobol_cmaes.py  ws_cma.py  ws_cma_es.py  ws_cma_es_similarity.py
tests/: test_boundary.py  test_cmawm.py  test_compress_symmetric.py  test_free_threaded.py  test_fuzzing.py  test_sampler.py  test_stats.py  test_terminate.py  test_termination_criterion.py  test_warm_start.py
tools/: cmaes_visualizer.py  optuna_profile.py  ws_cmaes_visualizer.py
visualizer/: visualizer.py  ws_cma_es.py
