[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cmaes"
description = "Lightweight Covariance Matrix Adaptation Evolution Strategy (CMA-ES) implementation for Python 3."
readme = "README.md"
authors = [
    { name = "Masashi Shibata", "email" = "m.shibata1020@gmail.com" }
]
maintainers = [
    { name = "Masahiro Nomura", "email" = "masahironomura5325@gmail.com" },
    { name = "Ryoki Hamano", "email" = "hamano_ryoki_xa@cyberagent.co.jp" }
]
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
cmawm = ["scipy"]

[project.urls]
"Homepage" = "https://github.com/CyberAgentAILab/cmaes"

[tool.setuptools.dynamic]
version = {attr = "cmaes.__version__"}

[tool.setuptools]
packages = ["cmaes"]
include-package-data = false

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 99
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".venv",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "I001",   # Import block is unsorted
    "E203",
]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { torch = false }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    # lint
    "mypy",
    "ruff",
    # tests
    "pytest",
    # visualization
    "matplotlib",
]
optional = [
    # for Safe CMA-ES
    "torch",
    "gpytorch",
    # for CMA with margin
    "scipy",
]
benchmark = [
    "kurobako",
    "cma",
    "optuna",
]
