[metadata]
name = cmaes
version = attr: cmaes.__version__

url = https://github.com/CyberAgent/cmaes
author = Masashi Shibata
author_email = shibata_masashi@cyberagent.co.jp
description = Lightweight Covariance Matrix Adaptation Evolution Strategy (CMA-ES) implementation for Python 3.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research

[options]
include_package_data = True
packages = find:
setup_requires =
    numpy
    wheel
install_requires =
    numpy

[options.extras_require]
benchmark =
    kurobako
    cma
    optuna
visualization =
    matplotlib
    scipy
lint =
    mypy
    flake8
    black
release =
    wheel
    twine

[options.packages.find]
exclude =
    tests
    examples
    benchmark

[flake8]
max-line-length = 99
statistics = True
exclude = venv,build

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
