[metadata]
name = cmaes
version = attr: cmaes.__version__

url = https://github.com/CyberAgent/cmaes
author = Masashi Shibata
author_email = m.shibata1020@gmail.com
maintainer = Masahiro Nomura
maintainer_email = nomura_masahiro@cyberagent.co.jp
description = Lightweight Covariance Matrix Adaptation Evolution Strategy (CMA-ES) implementation for Python 3.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research

[options]
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools>=46.4.0
    wheel
install_requires =
    numpy

[options.packages.find]
exclude =
    tests
    examples
    benchmark

[flake8]
max-line-length = 99
statistics = True
exclude = venv,build,.tox,.eggs

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
